# Yumlabs--BrainRot

./: .gitignore  Cargo.toml  KANBAN.md  README.md  mkdocs.yml  requirements.txt
.github/: project-config.yml
.github/scripts/: kanban_sync.py
.github/workflows/: docs.yml  kanban-automation.yml
data/: current_episode.json
docs/: index.md
src/: confession.rs  constants.rs  main.rs  media_splitter.py  ollama.rs  splitter.rs  tts.rs  tts_generator.py  upload.rs  upload_handler.py  utils.rs  vid_generator.py  video.rs  video_generator.rs
