[package]
name = "py_rs_project"
version = "0.1.0"
edition = "2021"

[dependencies]
ollama-rs = "0.2.5"
tokio = { version = "1.43.0", features = ["full"] }
csv = "1.3.1"
rand = "0.9.0"
anyhow = "1.0.95"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.138"
symphonia = "0.5.4"
